--- a/src/main/resources/templates/seller/sellerhistory.html
+++ b/src/main/resources/templates/seller/sellerhistory.html
@@ -13,7 +13,7 @@
 <form th:action="@{/seller/home}" method="get">
     <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
 </form>
-<form th:action="@{/seller/products}" method="get">
+<form th:action="@{/seller/myproducts}" method="get">
     <button class="btn btn-md btn-warning btn-block" type="Submit">Go To View Products Page</button>
 </form>
 <div class="page-header">
