--- a/src/main/resources/templates/seller/home.html
+++ b/src/main/resources/templates/seller/home.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" th:href="@{/css/style.min.css}">
     <link rel="stylesheet" th:href="@{/css/switcher.css}">
     <link rel="stylesheet" th:href="@{/css/green.css}" class="colors">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" th:href="@{/images/32.png}" sizes="32x32" type="image/png"/>
@@ -63,12 +62,12 @@
                 <div class="col-md-4 anima fadeInLeft">
                     <header class="section-header cta-message">
                         <h2>About company</h2>
-                        <h4>Pellentesque interdum eget</h4>
+                        <h4>Buy. Sell. Chill.</h4>
                     </header>
                 </div>
                 <div class="col-md-8 cta-message anima fade-up">
-                    <p>Pellentesque interdum eget odio eu rutrum. Nunc tempus massa a tellus aliquet sodales. Nunc urna tortor, rhoncus accumsan vestibulum non, feugiat a mauris. In hac habitasse platea dictumst. In sagittis orci nec aliquet tristique.</p>
-                    <p style="display:none;" id="showme">Phasellus porta eros vel lacus euismod consequat. Phasellus eleifend, nibh non feugiat hendrerit, lacus enim adipiscing eros, a pharetra erat neque eget est. Quisque vitae aliquet urna. Integer suscipit lectus eu enim porttitor fringilla. Ut blandit, urna in auctor euismod, arcu eros pharetra metus, a porta purus libero a nibh.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
+                    <p>Our aim is to make it easy for buyers to purchase what they want and sellers to sell what they want!</p>
+                    <p style="display:none;" id="showme">Simplicity and suave. Easy to use and quick, you won't be wasting any time here!</p>
                     <a class="btn btn-store outline" id="show-btn" href="#">Read more</a>
                 </div>
             </div>
@@ -134,7 +133,7 @@
                 <h1><strong>Contact</strong></h1>
                 <p>Do you have some kind of problem with our products?</p>
             </header>
-            <form action="index.html" method="post" novalidate id="contact-form">
+            <form th:action="@{/seller/home}" method="get">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-4 contact-info cta-message anima fade-right">
                         <address>
@@ -150,24 +149,24 @@
                         <div class="form-group">
                             <label class="control-label" for="contact-name">Name</label>
                             <div class="controls">
-                                <input id="contact-name" name="contactName" placeholder="Your name" class="form-control input-lg requiredField" type="text">
+                                <input id="contact-name" placeholder="Your name" class="form-control input-lg requiredField" type="text">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label" for="contact-mail">Email</label>
                             <div class=" controls">
-                                <input id="contact-mail" name="email" placeholder="Your email" class="form-control input-lg requiredField" type="email">
+                                <input id="contact-mail" placeholder="Your email" class="form-control input-lg requiredField" type="email">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label" for="contact-message">Message</label>
                             <div class="controls">
-                                <textarea id="contact-message" name="comments" placeholder="Your message" class="form-control input-lg requiredField" rows="5"></textarea>
+                                <textarea id="contact-message" class="form-control input-lg requiredField" rows="5"></textarea>
                             </div>
                         </div>
                         <p>
-                            <button name="submit" type="submit" class="btn btn-store btn-block">Send Message</button></p>
-                        <input type="hidden" name="submitted" id="submitted3" value="true">
+                            <button type="submit" class="btn btn-store btn-block">Send Message</button>
+                        </p>
                     </div>
                 </div>
             </form>
