--- a/src/main/resources/templates/seller/sellerhistory.html
+++ b/src/main/resources/templates/seller/sellerhistory.html
@@ -2,32 +2,222 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 
+<!--<head>-->
+    <!--<title>My Purchase history</title>-->
+    <!--<link rel="stylesheet" type="text/css" th:href="@{/css/home.css}" />-->
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+    <!--<script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
+    <!--<script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+<!--</head>-->
+<!--<body>-->
+<!--<form th:action="@{/seller/home}" method="get">-->
+    <!--<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>-->
+<!--</form>-->
+<!--<form th:action="@{/seller/myproducts}" method="get">-->
+    <!--<button class="btn btn-md btn-warning btn-block" type="Submit">Go To View Products Page</button>-->
+<!--</form>-->
+<!--<div class="page-header">-->
+    <!--<h3>Product history</h3>-->
+<!--</div>-->
+<!--<div class="col-md-12 container-fluid">-->
+    <!--<div class="container">-->
+        <!--<ul th:each="product : ${products}">-->
+            <!--<li>-->
+                <!--<span th:text="'Name : ' + ${product.getProductName()} + ' | '"></span>-->
+                <!--<span th:text="'Quantity Sold: '+ ${product.getQuantitySold().toString()} + ' | '"></span>-->
+                <!--<span th:text="'Profit : '+${product.getProfit().toString()} + ' | '"></span>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</div>-->
+<!--</body>-->
+<!--</html>-->
 <head>
-    <title>My Purchase history</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <title>Product</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/anima.css}">
+    <link rel="stylesheet" th:href="@{/css/owl.carousel.css}">
+    <link rel="stylesheet" th:href="@{/css/style.min.css}">
+    <link rel="stylesheet" th:href="@{/css/switcher.css}">
+    <link rel="stylesheet" th:href="@{/css/green.css}" class="colors">
     <script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="shortcut icon" th:href="@{/images/32.png}" sizes="32x32" type="image/png"/>
+    <link rel="apple-touch-icon-precomposed" th:href="@{/images/60.png}" type="image/png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/images/72.png}" type="image/png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" th:href="@{/images/120.png}" type="image/png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" th:href="@{/images/152.png}" type="image/png"/>
 </head>
-<body>
-<form th:action="@{/seller/home}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
-</form>
-<form th:action="@{/seller/myproducts}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To View Products Page</button>
-</form>
-<div class="page-header">
-    <h3>Product history</h3>
-</div>
-<div class="col-md-12 container-fluid">
+
+<body id="home">
+<div id="main-nav" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
-        <ul th:each="product : ${products}">
-            <li>
-                <span th:text="'Name : ' + ${product.getProductName()} + ' | '"></span>
-                <span th:text="'Quantity Sold: '+ ${product.getQuantitySold().toString()} + ' | '"></span>
-                <span th:text="'Profit : '+${product.getProfit().toString()} + ' | '"></span>
-            </li>
-        </ul>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#home">
+                <img id="navlogo" th:src="@{/images/navlogo-green.png}" alt="microstore" width="122" height="45">
+            </a>
+
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul id="navigation" class="nav navbar-nav navbar-right text-center">
+                <li>
+                    <form th:action="@{/seller/home}" method="get">
+                        <button class="btn btn-default dropdown-toggle" name="Home" type="Submit">Home</button>
+                    </form>
+                </li>
+                <li>
+                    <form th:action="@{/seller/myproducts}" method="get">
+                        <button class="btn btn-default" name="View Products" type="Submit">View Products</button>
+                    </form>
+                </li>
+                <li>
+                    <form th:action="@{/seller/additem}" method="get">
+                        <button class="btn btn-default" name="Add Item" type="Submit">Add Items</button>
+                    </form>
+                </li>
+                <li>
+                    <form th:action="@{/logout}" method="get">
+                        <button class="btn btn-default dropdown-toggle" name="Logout" type="Submit">Logout</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
     </div>
+</div>
+
+
+<section id="orderform" class="gray-bg padding-top-bottom" ng-controller="orderController">
+    <div class="container">
+        <header class="section-header text-center">
+            <h2>Product History</h2>
+        </header>
+        <div class="row">
+            <div class="col-sm-12 col-md-12">
+                <table class="table">
+                    <thead>
+                        <th>Product Name</th>
+                        <th>Quantity Sold</th>
+                        <th>Profit</th>
+                    </thead>
+                    <tbody>
+                        <tr th:each="product : ${products}">
+                            <td th:text="${product.getProductName()}"></td>
+                            <td th:text="${product.getQuantitySold().toString()}"></td>
+                            <td th:text="${product.getProfit().toString()}"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="cta" class="padding-top-bottom color-bg light-typo">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-md-4 col-sm-4 news anima fade-up">
+                <i class="glyphicon glyphicon-check"></i>
+                <h3>Quality guaranteed</h3>
+            </div>
+            <div class="col-md-4 col-sm-4 news anima fade-up d1">
+                <i class="	glyphicon glyphicon-home"></i>
+                <h3>Home delivery</h3>
+            </div>
+            <div class="col-md-4 col-sm-4 anima fade-up d2">
+                <i class="glyphicon glyphicon-lock"></i>
+                <h3>Secure payment</h3>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer id="main-footer" class="dark-bg light-typo">
+    <div class="container">
+        <p class="pull-left copyright">&copy; Aviato 2017.</p>
+
+        <div class="pull-right paymentMethodImg copyright">
+            <a class="btn btn-store outline" href="#" data-toggle="modal" data-target=".text-modal">Terms & conditions</a>
+        </div>
+    </div>
+</footer>
+
+<div class="modal fade text-modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="color-bg">
+                <div class="container">
+                    <div class="row ">
+                        <div class="col-xs-12 col-sm-12 col-md-12 color-bg light-typo" id="9modal-bar">
+                            <h2 class="pull-left">TERMS & CONDITIONS</h2>
+                            <a class="close pull-right" href="#" data-dismiss="modal"><i class="icon-close"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row ">
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <h3>Pricing policy</h3>
+                        <p>Prices are shown in € (EURO). All prices include Danish VAT of 25%. Prices do not include service, payment and delivery charges. Orders may be subjected to local taxes and/or import duties at your own expense. Tax-free shopping on microStore.com
+                            is not available. micro Store the right to change prices of the products. The prices of the products will, during the time of placing an order, be valid throughout the process. We however take reservations for typing errors.</p>
+                        <h3>Payment</h3>
+                        <p>We accept the following credit- and debit cards: Visa, Mastercard, Maestro, Visa Electron, JCB, UnionPay and American Express.The amount for your order will not be charged until your order is shipped from microStore. We also accept microStore online
+                            gift cards.</p>
+                        <h3>Order confirmation</h3>
+                        <p>You will receive an order confirmation by e-mail shortly after placing your order. On rare occasions an item can be out of stock. Then you will be informed by e-mail.</p>
+                        <h3>Shipping</h3>
+                        <p>We know that you can’t wait to get your order so we do our best to ship your order on the following working day. To follow the goods way to your closet you can track your order with the tracking number included in your shipping confirmation, which
+                            you get by e-mail as soon as we dispatch your order. Your order will be dispatched within 1-3 workdays from the time you place your order. When your order is dispatched, you will receive a shipping confirmation by e-mail. Orders to Denmark above
+                            200€ and all international orders will include a tracking number to your shipping confirmation. All orders within EU are shipped via GLS and outside Europe orders are shipped via TNT, UPS and FedEx. The following shipping charges will be added
+                            to your order:<br> Denmark: 4 EUR <br> Europe: 8 EUR <br> Rest of the world: 16 EUR <br> Danish orders will be delivered within 1-3 days from the day you received your shipping confirmation. International orders will be delivered within 1-10 days
+                            from the day you received your shipping confirmation. Orders are not shipped or delivered on weekends and holidays. If a delivery suffers a delay or an item happens to be out of stock, you will be informed by e-mail as quick as possible and latest
+                            30 days after the order was placed. Some delays may occur during sales, very busy periods, public holidays and severe weather conditions. Please notice that we are unable to deliver to P.O. box adresses.</p>
+                        <h3>Returns</h3>
+                        <p>If you change your mind about an item you must notify us within 14 days after having received your purchase and ship it to microStore within the following 14 days from having notified us. To return an order please contact shop@microStore.com and
+                            await our return confirmation. When received, you can return your order by the following procedure: Make sure that the product is still in perfect condition with undamaged packaging and tags still attached. We reserve the right to refuse any returns
+                            that do not match with these critetia:</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <p><br><br>Place the product in a shipping box or plastic bag. Hats and caps must be returned in a box so they do not get squashed out of shape. Enclose the original sales receipt to the product. Write RETURN on the package to ensure a faster expedition.
+                            Send the package to: microStore, 84 State Road 123, City, State 24813 The return and financial responsibility is yours until it reaches microStore and are confirmed by a delivery confirmation. Please notice that we can exchange your items to another
+                            size or color if available in stock.</p>
+                        <h3>Warranty claims</h3>
+                        <p>There is a 2 years warranty on all products sold on www.microStore.com. This warranty covers manufacturing faults only, not wear and tear from regular use. Please contact us at shop@microStore.com if you have a warranty claim, including order number,
+                            photos of the claim area and a description of the claim.</p>
+                        <h3>Disclaimer</h3>
+                        <p>microStore does not guarantee that all items shown are in stock at the time of your order. In the event that an item is unavailable for whatever reason, microStore will contact you by e-mail. Although we do our best to display correct images, correct
+                            colours, info and prices, errors may occur.</p>
+                        <h3>Privacy policy</h3>
+                        <p>All your personal information is handled under strict confidence. microStore.com will never give any of your personal information to 3rd parties.All information is encrypted for safety.</p>
+                        <h3>Security</h3>
+                        <p>For the safety of your personal information, we use SLL encryption on all data to and from the site. When placing an order, you can immediately check the security validity by clicking the padlock icon that appears in the URL line of your browser
+                            when SSL is activated.</p>
+                        <h3>Cookies</h3>
+                        <p>Cookies are used by microStore.com in order to improve your experience when browsing and using the website. The cookie identifies your computer and allows the site to remember your personal settings. microStore.com may not operate properly when
+                            cookies are disabled in your web browser.</p>
+                        <h3>Measurements</h3>
+                        <p>All measurements are approximate and variance may occur. We have done our best but please have average sizing in mind and note that +/- 1cm on each measurement may occur.</p>
+                        <h3>Age restrictions</h3>
+                        <p>Parental or guardian consent is required for customers under the age of 18.</p>
+                        <h3>Governing law</h3>
+                        <p>The terms of use are complied in accordance with Danish law and the Danish courts will have exclusive jurisdiction.
+                        </p>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-12 text-center">
+                        <a class="btn btn-store" href="#" data-dismiss="modal">Back to shop</a><br><br>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script type="text/javascript" th:src="@{/js/plugins.js}"></script>
+<script type="text/javascript" th:src="@{/js/custom2.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/ga.js}"></script>
 </body>
+
 </html>
