--- a/src/main/resources/templates/seller/home.html
+++ b/src/main/resources/templates/seller/home.html
@@ -34,7 +34,7 @@
                 <ul id="navigation" class="nav navbar-nav navbar-right text-center">
                     <li>
                         <form th:action="@{/seller/myproducts}" method="get">
-                            <button class="btn btn-default" name="View Products" type="Submit">View Products</button>
+                            <button class="btn btn-default" type="Submit">View Products</button>
                         </form>
                     </li>
                     <li>
@@ -44,12 +44,12 @@
                     </li>
                     <li>
                         <form th:action="@{/seller/sellerhistory}" method="get">
-                            <button class="btn btn-default" name="Product History" type="Submit">Product History</button>
+                            <button class="btn btn-default" type="Submit">Product History</button>
                         </form>
                     </li>
                     <li>
                         <form th:action="@{/logout}" method="get">
-                            <button class="btn btn-default" name="Logout" type="Submit">Logout</button>
+                            <button class="btn btn-default" type="Submit">Logout</button>
                         </form>
                     </li>
                 </ul>
