--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<div class="img-logo" style="text-align:center"><img src="/images/aviato.png"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
