--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -33,8 +33,8 @@
 									</div>
 
 									<div class="form-group">
-										<label>Admin</label>
-										<input type="radio" th:field="*{role}" th:value="1" />
+										<!--<label>Admin</label>-->
+										<!--<input type="radio" th:field="*{role}" th:value="1" />-->
 										<label>Buyer</label>
 										<input type="radio" th:field="*{role}" th:value="2" />
 										<label>Seller</label>
