add username and edit product fix

--- a/src/main/resources/templates/seller/home.html
+++ b/src/main/resources/templates/seller/home.html
@@ -29,6 +29,9 @@
                 <a class="navbar-brand" href="#home">
                     <img id="navlogo" th:src="@{/images/navlogo-green.png}" alt="microstore" width="122" height="45">
                 </a>
+                <label>
+                    <span style="color: white;margin-right: 10px;margin-bottom: 20px;" th:text="'Seller : ' + ${user.getUsername()}"></span>
+                </label>
             </div>
             <div class="collapse navbar-collapse">
                 <ul id="navigation" class="nav navbar-nav navbar-right text-center">
